# taubenschreck

./: .gitignore  LICENSE  README.md  pyproject.toml
config/: config.example.toml
docs/: quickstart.md
docs/superpowers/plans/: 2026-06-22-phase1-hardware-free.md
docs/superpowers/specs/: 2026-06-22-taubenschreck-design.md
taubenschreck/: main.py
taubenschreck/backend/: __init__.py  app.py  controller.py  db.py  recorder.py  storage.py
taubenschreck/core/: config.py  state.py  types.py
taubenschreck/dashboard/static/: app.js  index.html  style.css
taubenschreck/detector/: model.py  pipeline.py  safety.py
taubenschreck/detector/sources/: base.py  videofile.py  webcam.py
taubenschreck/detector/sprayer/: base.py  mock.py
taubenschreck/notifier/: ntfy.py
tests/: test_app.py  test_config.py  test_controller.py  test_core_types.py  test_db.py  test_model.py  test_notifier.py  test_pipeline.py  test_safety.py  test_smoke.py  test_sources.py  test_sprayer.py  test_storage_recorder.py
