[project]
name = "taubenschreck"
version = "0.1.0"
description = "Vision-triggered water sentry that humanely keeps pigeons off a balcony."
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "opencv-python>=4.9",
    "ultralytics>=8.1",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["taubenschreck*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
